src/hdfs3_bindings.rs

/* automatically generated by rust-bindgen 0.59.2 */

pub type __int16_t = ::std::os::raw::c_short;
pub type __uint16_t = ::std::os::raw::c_ushort;
pub type __int32_t = ::std::os::raw::c_int;
pub type __uint32_t = ::std::os::raw::c_uint;
pub type __int64_t = ::std::os::raw::c_long;
pub type __time_t = ::std::os::raw::c_long;
pub type time_t = __time_t;
pub type size_t = ::std::os::raw::c_ulong;
#[doc = " Some utility decls used in libhdfs."]
pub type tSize = i32;
#[doc = " size of data for read/write io ops"]
pub type tTime = time_t;
#[doc = " time type in seconds"]
pub type tOffset = i64;
#[doc = " offset within the file"]
pub type tPort = u16;
#[repr(u32)]
#[doc = " port"]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum tObjectKind {
    kObjectKindFile = 70,
    kObjectKindDirectory = 68,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfsFileSystemInternalWrapper {
    _unused: [u8; 0],
}
pub type hdfsFS = *mut HdfsFileSystemInternalWrapper;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfsFileInternalWrapper {
    _unused: [u8; 0],
}
pub type hdfsFile = *mut HdfsFileInternalWrapper;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct hdfsBuilder {
    _unused: [u8; 0],
}
extern "C" {
    #[doc = " Return error information of last failed operation."]
    #[doc = ""]
    #[doc = " @return \t\t\tA not NULL const string point of last error information."]
    #[doc = " \t\t\t\t\tCaller can only read this message and keep it unchanged. No need to free it."]
    #[doc = " \t\t\t\t\tIf last operation finished successfully, the returned message is undefined."]
    pub fn hdfsGetLastError() -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " Determine if a file is open for read."]
    #[doc = ""]
    #[doc = " @param file     The HDFS file"]
    #[doc = " @return         1 if the file is open for read; 0 otherwise"]
    pub fn hdfsFileIsOpenForRead(file: hdfsFile) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Determine if a file is open for write."]
    #[doc = ""]
    #[doc = " @param file     The HDFS file"]
    #[doc = " @return         1 if the file is open for write; 0 otherwise"]
    pub fn hdfsFileIsOpenForWrite(file: hdfsFile) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " hdfsConnectAsUser - Connect to a hdfs file system as a specific user"]
    #[doc = " Connect to the hdfs."]
    #[doc = " @param nn   The NameNode.  See hdfsBuilderSetNameNode for details."]
    #[doc = " @param port The port on which the server is listening."]
    #[doc = " @param user the user name (this is hadoop domain user). Or NULL is equivelant to hhdfsConnect(host, port)"]
    #[doc = " @return Returns a handle to the filesystem or NULL on error."]
    #[doc = " @deprecated Use hdfsBuilderConnect instead."]
    pub fn hdfsConnectAsUser(
        nn: *const ::std::os::raw::c_char,
        port: tPort,
        user: *const ::std::os::raw::c_char,
    ) -> hdfsFS;
}
extern "C" {
    #[doc = " hdfsConnect - Connect to a hdfs file system."]
    #[doc = " Connect to the hdfs."]
    #[doc = " @param nn   The NameNode.  See hdfsBuilderSetNameNode for details."]
    #[doc = " @param port The port on which the server is listening."]
    #[doc = " @return Returns a handle to the filesystem or NULL on error."]
    #[doc = " @deprecated Use hdfsBuilderConnect instead."]
    pub fn hdfsConnect(nn: *const ::std::os::raw::c_char, port: tPort) -> hdfsFS;
}
extern "C" {
    #[doc = " hdfsConnect - Connect to an hdfs file system."]
    #[doc = ""]
    #[doc = " Forces a new instance to be created"]
    #[doc = ""]
    #[doc = " @param nn     The NameNode.  See hdfsBuilderSetNameNode for details."]
    #[doc = " @param port   The port on which the server is listening."]
    #[doc = " @param user   The user name to use when connecting"]
    #[doc = " @return       Returns a handle to the filesystem or NULL on error."]
    #[doc = " @deprecated   Use hdfsBuilderConnect instead."]
    pub fn hdfsConnectAsUserNewInstance(
        nn: *const ::std::os::raw::c_char,
        port: tPort,
        user: *const ::std::os::raw::c_char,
    ) -> hdfsFS;
}
extern "C" {
    #[doc = " hdfsConnect - Connect to an hdfs file system."]
    #[doc = ""]
    #[doc = " Forces a new instance to be created"]
    #[doc = ""]
    #[doc = " @param nn     The NameNode.  See hdfsBuilderSetNameNode for details."]
    #[doc = " @param port   The port on which the server is listening."]
    #[doc = " @return       Returns a handle to the filesystem or NULL on error."]
    #[doc = " @deprecated   Use hdfsBuilderConnect instead."]
    pub fn hdfsConnectNewInstance(nn: *const ::std::os::raw::c_char, port: tPort) -> hdfsFS;
}
extern "C" {
    #[doc = " Connect to HDFS using the parameters defined by the builder."]
    #[doc = ""]
    #[doc = " The HDFS builder will be freed, whether or not the connection was"]
    #[doc = " successful."]
    #[doc = ""]
    #[doc = " Every successful call to hdfsBuilderConnect should be matched with a call"]
    #[doc = " to hdfsDisconnect, when the hdfsFS is no longer needed."]
    #[doc = ""]
    #[doc = " @param bld    The HDFS builder"]
    #[doc = " @return       Returns a handle to the filesystem, or NULL on error."]
    pub fn hdfsBuilderConnect(bld: *mut hdfsBuilder) -> hdfsFS;
}
extern "C" {
    #[doc = " Create an HDFS builder."]
    #[doc = ""]
    #[doc = " @return The HDFS builder, or NULL on error."]
    pub fn hdfsNewBuilder() -> *mut hdfsBuilder;
}
extern "C" {
    #[doc = " Do nothing, we always create a new instance"]
    #[doc = ""]
    #[doc = " @param bld The HDFS builder"]
    pub fn hdfsBuilderSetForceNewInstance(bld: *mut hdfsBuilder);
}
extern "C" {
    #[doc = " Set the HDFS NameNode to connect to."]
    pub fn hdfsBuilderSetNameNode(bld: *mut hdfsBuilder, nn: *const ::std::os::raw::c_char);
}
extern "C" {
    #[doc = " Set the port of the HDFS NameNode to connect to."]
    #[doc = ""]
    #[doc = " @param bld The HDFS builder"]
    #[doc = " @param port The port."]
    pub fn hdfsBuilderSetNameNodePort(bld: *mut hdfsBuilder, port: tPort);
}
extern "C" {
    #[doc = " Set the username to use when connecting to the HDFS cluster."]
    #[doc = ""]
    #[doc = " @param bld The HDFS builder"]
    #[doc = " @param userName The user name.  The string will be shallow-copied."]
    pub fn hdfsBuilderSetUserName(bld: *mut hdfsBuilder, userName: *const ::std::os::raw::c_char);
}
extern "C" {
    #[doc = " Set the path to the Kerberos ticket cache to use when connecting to"]
    #[doc = " the HDFS cluster."]
    #[doc = ""]
    #[doc = " @param bld The HDFS builder"]
    #[doc = " @param kerbTicketCachePath The Kerberos ticket cache path.  The string"]
    #[doc = "                            will be shallow-copied."]
    pub fn hdfsBuilderSetKerbTicketCachePath(
        bld: *mut hdfsBuilder,
        kerbTicketCachePath: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    #[doc = " Set the token used to authenticate"]
    #[doc = ""]
    #[doc = " @param bld The HDFS builder"]
    #[doc = " @param token The token used to authenticate"]
    pub fn hdfsBuilderSetToken(bld: *mut hdfsBuilder, token: *const ::std::os::raw::c_char);
}
extern "C" {
    #[doc = " Free an HDFS builder."]
    #[doc = ""]
    #[doc = " It is normally not necessary to call this function since"]
    #[doc = " hdfsBuilderConnect frees the builder."]
    #[doc = ""]
    #[doc = " @param bld The HDFS builder"]
    pub fn hdfsFreeBuilder(bld: *mut hdfsBuilder);
}
extern "C" {
    #[doc = " Set a configuration string for an HdfsBuilder."]
    #[doc = ""]
    #[doc = " @param key      The key to set."]
    #[doc = " @param val      The value, or NULL to set no value."]
    #[doc = "                 This will be shallow-copied.  You are responsible for"]
    #[doc = "                 ensuring that it remains valid until the builder is"]
    #[doc = "                 freed."]
    #[doc = ""]
    #[doc = " @return         0 on success; nonzero error code otherwise."]
    pub fn hdfsBuilderConfSetStr(
        bld: *mut hdfsBuilder,
        key: *const ::std::os::raw::c_char,
        val: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Get a configuration string."]
    #[doc = ""]
    #[doc = " @param key      The key to find"]
    #[doc = " @param val      (out param) The value.  This will be set to NULL if the"]
    #[doc = "                 key isn't found.  You must free this string with"]
    #[doc = "                 hdfsConfStrFree."]
    #[doc = ""]
    #[doc = " @return         0 on success; nonzero error code otherwise."]
    #[doc = "                 Failure to find the key is not an error."]
    pub fn hdfsConfGetStr(
        key: *const ::std::os::raw::c_char,
        val: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Get a configuration integer."]
    #[doc = ""]
    #[doc = " @param key      The key to find"]
    #[doc = " @param val      (out param) The value.  This will NOT be changed if the"]
    #[doc = "                 key isn't found."]
    #[doc = ""]
    #[doc = " @return         0 on success; nonzero error code otherwise."]
    #[doc = "                 Failure to find the key is not an error."]
    pub fn hdfsConfGetInt(
        key: *const ::std::os::raw::c_char,
        val: *mut i32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Free a configuration string found with hdfsConfGetStr."]
    #[doc = ""]
    #[doc = " @param val      A configuration string obtained from hdfsConfGetStr"]
    pub fn hdfsConfStrFree(val: *mut ::std::os::raw::c_char);
}
extern "C" {
    #[doc = " hdfsDisconnect - Disconnect from the hdfs file system."]
    #[doc = " Disconnect from hdfs."]
    #[doc = " @param fs The configured filesystem handle."]
    #[doc = " @return Returns 0 on success, -1 on error."]
    #[doc = "         Even if there is an error, the resources associated with the"]
    #[doc = "         hdfsFS will be freed."]
    pub fn hdfsDisconnect(fs: hdfsFS) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " hdfsOpenFile - Open a hdfs file in given mode."]
    #[doc = " @param fs The configured filesystem handle."]
    #[doc = " @param path The full path to the file."]
    #[doc = " @param flags - an | of bits/fcntl.h file flags - supported flags are O_RDONLY, O_WRONLY (meaning create or overwrite i.e., implies O_TRUNCAT),"]
    #[doc = " O_WRONLY|O_APPEND and O_SYNC. Other flags are generally ignored other than (O_RDWR || (O_EXCL & O_CREAT)) which return NULL and set errno equal ENOTSUP."]
    #[doc = " @param bufferSize Size of buffer for read/write - pass 0 if you want"]
    #[doc = " to use the default configured values."]
    #[doc = " @param replication Block replication - pass 0 if you want to use"]
    #[doc = " the default configured values."]
    #[doc = " @param blocksize Size of block - pass 0 if you want to use the"]
    #[doc = " default configured values."]
    #[doc = " @return Returns the handle to the open file or NULL on error."]
    pub fn hdfsOpenFile(
        fs: hdfsFS,
        path: *const ::std::os::raw::c_char,
        flags: ::std::os::raw::c_int,
        bufferSize: ::std::os::raw::c_int,
        replication: ::std::os::raw::c_short,
        blocksize: tOffset,
    ) -> hdfsFile;
}
extern "C" {
    #[doc = " hdfsCloseFile - Close an open file."]
    #[doc = " @param fs The configured filesystem handle."]
    #[doc = " @param file The file handle."]
    #[doc = " @return Returns 0 on success, -1 on error."]
    #[doc = "         On error, errno will be set appropriately."]
    #[doc = "         If the hdfs file was valid, the memory associated with it will"]
    #[doc = "         be freed at the end of this call, even if there was an I/O"]
    #[doc = "         error."]
    pub fn hdfsCloseFile(fs: hdfsFS, file: hdfsFile) -> ::std::os::raw::c_int;
}
